--- a/style.css
+++ b/style.css
@@ -49,7 +49,7 @@
 .cart{
     font-size: 25px;
 }
-.main{
+.landing-main{
    background-image: url("./img/spice.jpg");
   background-size: cover;
   background-position: 50% 50%;
@@ -75,4 +75,18 @@
     color: white;
     border-radius: 60px;
     font-weight: 700;
+    }
+
+.store-picture{
+    background-image: url('./img/storePic.jpg');
+    background-size: cover;
+  background-position: 50% 50%;
+   height: 50vh;
+   width: 100%;
+   margin-bottom: 30px;
+   border-color: black;
 }
+
+
+
+
